# LinkCL

./: .gitignore  CMakeLists.txt  README.md
LinkCL/src/: CMakeLists.txt
LinkCL/src/CL/: CMakeLists.txt  cl.c  cl.h
LinkCL/src/CL_HPP/: CMakeLists.txt  cl2.hpp  opencl.hpp
LinkCL/src/Core/: CMakeLists.txt  Core.h
